--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "illuminate/support": "^10.0|^11.0",
+        "balajidharma/laravel-comment":"^1.0",
         "balajidharma/laravel-category":"^2.0"
     },
     "autoload": {
