--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "illuminate/support": "^10.0|^11.0",
         "balajidharma/laravel-comment":"^1.0",
-        "balajidharma/laravel-category":"^2.0",
-        "oddvalue/laravel-drafts":"^2.0"
+        "balajidharma/laravel-category":"^2.0"
     },
     "autoload": {
         "psr-4": {
