--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "balajidharma/laravel-comment":"^1.0",
         "balajidharma/laravel-category":"^2.0",
         "balajidharma/laravel-viewable":"^1.0",
+        "balajidharma/laravel-attributes":"^1.0",
         "spatie/laravel-activitylog":"^4.9"
     },
     "autoload": {
