--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "balajidharma/laravel-category":"^2.0",
         "balajidharma/laravel-viewable":"^1.0",
         "balajidharma/laravel-attributes":"^1.0",
-        "spatie/laravel-activitylog":"^4.9",
-        "blaspsoft/blasp":"^1.2"
+        "spatie/laravel-activitylog":"^4.9"
     },
     "autoload": {
         "psr-4": {
