--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "balajidharma/laravel-comment":"^1.0",
         "balajidharma/laravel-category":"^2.0",
         "balajidharma/laravel-viewable":"^1.0",
